k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
  labels:
    app: go-web-app
spec:
  ports:
      port: 80           
      targetPort: 8080
  selector:
    app: go-web-app
  type: ClusterIP
